--- a/app/assets/stylesheets/static_pages.scss
+++ b/app/assets/stylesheets/static_pages.scss
@@ -33,6 +33,7 @@ input[type="text"] {
   color: gold;
   border: 1px solid gold;
   border-radius: 4px;
+  padding: 4px;
 }
 
 .todo-button, button {
@@ -62,7 +63,7 @@ input[type="text"] {
 }
 
 .todo-form {
-  width: 240px;
+  width: 320px;
   text-align: center;
   margin: 20px auto;
   display: block;
@@ -76,7 +77,7 @@ h2 {
   margin: auto;
   padding: 12px;
   border: 1px solid gold;
-  width: 240px;
+  width: 320px;
   text-align: center;
   border-radius: 4px;
   background: gold;
@@ -87,13 +88,15 @@ h2 {
   margin: auto;
   padding: 12px;
   border: 1px solid gold;
-  width: 240px;
+  width: 306px;
   min-height: 60px;
   text-align: center;
-  border-radius: 4px;
+  border-radius: 8px;
   background: gold;
   margin-bottom: 12px;
-
+  opacity: .9;
+  border-top-left-radius: 0px;
+  border-top-right-radius: 0px;
 }
 
 h2:hover {
